# TetherLoc

./: .gitignore  README.md  build_installer.ps1  build_msi.ps1  build_windows.ps1  publish_to_github.ps1  pyproject.toml  requirements-build.txt  requirements.txt  run.ps1
ios_geo_spoofer/: __init__.py  __main__.py  app.py  backend.py  routing.py
linux_penguin/: README.md  install.sh  requirements.txt  run.sh  tetherloc_linux.py
tests/: test_backend.py  test_routing.py
